# engine

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/events/: event.hpp  keyEvents.hpp  mouseEvents.hpp
src/opengl/: context.hpp  opengl.hpp  program.hpp  shader.hpp  vertexArray.hpp
src/shaders/: triangle_frag.glsl  triangle_vert.glsl
src/utils/: creatable.h  fs.hpp
src/window/: window.cpp  window.hpp
